# neural_atlas_MPMcontact

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  RESULTS.md  benchmark_smoke.json  build_rabbit_atlas_poissondisk.py  chart_fem_solver.py  conftest.py  pinn_gradient_surgery.py  pyproject.toml  run_poisson_rabbit_atlas_schwarz.py  run_poisson_rabbit_atlas_schwarz_fem.py  run_rabbit_inverse_elder_atlas_schwarz.py  run_torus_inverse_neohookean_atlas.py  schwarz_poisson_attempt_status.md  test_chart_fem_solver.py
.claude/: launch.json  settings.local.json
archive/: EXPLORATION_REPORT.md
atlas/: __init__.py
benchmarks/: __init__.py
common/: __init__.py  geometry.py  models.py  schwarz.py  utils.py
configs/: rabbit_atlas_poisson.yaml  rabbit_atlas_volumetric.yaml  rabbit_inverse_elder_atlas.yaml  rabbit_inverse_neohookean_normal_disp.yaml  rabbit_inverse_ti_arruda_boyce.yaml  rabbit_inverse_ti_arruda_boyce_mms.yaml  rabbit_inverse_ti_arruda_boyce_normal_ramp.yaml  rabbit_sdf_inverse.yaml  torus_inverse_neohookean_atlas_cube.yaml  torus_inverse_neohookean_atlas_fillet_inn.yaml
contact_atlas/: 01_brainstorm.md  02_implementation_plan.md  03_mathematical_theory.md  cv7_formulation_brief.md  rock_joint_3d_brief.md
core/: build_mesh_sdf.py
docs/: chatgpt52_context_pack.json  chatgpt52_handoff_mindmap.md  chatgpt52_paper_starter.md  chatgpt52_seed_prompt.txt  cmame_claim_matrix.md  contact_theory_manual.md  contact_verification_manual.md  cv7_session_results.md  fourier_feature_chart_training.md  mpm_velocity_gradient_audit.md  ot_math_code_consistency.md  (+4 more)
(+572 files in other folders)
