[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-atlas-mpm"
version = "0.1.0"
description = "Topology-aware neural atlas for FEM/MPM on complex 3D geometries"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
topo = ["gudhi>=3.8"]
dev = [
    "pytest>=7.0",
    "gudhi>=3.8",
]

[tool.setuptools.packages.find]
include = ["atlas*", "solvers*", "common*", "benchmarks*", "postprocessing*"]

[tool.pytest.ini_options]
testpaths = ["tests", "topo_atlas/tests"]
